# sky-gfx-sponza-demo

./: CMakeLists.txt  README.md
src/: forward_rendering.cpp  forward_rendering.h  imgui_helper.cpp  imgui_helper.h  main.cpp
